[project]
name = "workflows-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Avery Freeman", email = "averyfreeman@gmail.com" }
]
dependencies = [
    "art>=6.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
